--- a/flaskblog/templates/all_pictures.html
+++ b/flaskblog/templates/all_pictures.html
@@ -5,7 +5,7 @@
     <!-- Page content -->
 
     <div class="main">
-        <div class="sidenav">
+         <!--<div class="sidenav">
             <h5>Sidebar</h5>
             <p class='text-muted'>
               <ul class="list-group">
@@ -13,7 +13,7 @@
                 <a href="#" class="list-group-item list-group-item-action">Add folder</a>
               </ul>
             </p>
-        </div>
+        </div>-->
         <div class="content-section">
             <hh1>Welcome!</hh1> <br>
             <hh6> Welcome to the internal webpage for the association "Sällskapet vikingatida skepp". This is a place where we can share and see pictures from our trips together.</hh6>
