--- a/flaskblog/templates/folder.html
+++ b/flaskblog/templates/folder.html
@@ -2,7 +2,6 @@
 {% block content %}
     <!-- Side navigation -->
 
-
     <!-- Page content -->
     <div class="main">
         <a href="/folder/{{folder.id}}/picture/new">
@@ -15,6 +14,12 @@
           <li><a href="{{ url_for('folders') }}">Albums</a></li>
           <li>{{folder.title}}</li>
         </ul>
+        <div class="content-section">
+            <hh1>{{folder.title}}</hh1> <br>
+            <hh6>{{folder.destinations}}</hh6> <br>
+            <hh6>{{folder.start_date}} &nbsp - &nbsp {{folder.end_date}}</hh6> <br>
+            <hh6>{{folder.description}}</hh6>
+        </div>
         <div class="row">
             {% for picture in pictures %}
                 <a href="/picture/{{picture.id}}">
@@ -24,60 +29,5 @@
                 </a>
             {% endfor %}
         </div>
-
-
-        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-                {% for picture in pictures %}
-                    <div class="carousel-item">
-                        <img src="{{ url_for('static', filename=('trip_' ~ picture.folder_id ~ '/' ~ picture.image_file)) }}"
-                             class="d-block w-100" alt="Lights">
-                    </div>
-                {% endfor %}
-            </div>
-        </div> -->
-        {% for picture in pictures %}
-            <div class="row">
-              <div class="col-md-4">
-                <div class="thumbnail">
-                  <a href="/picture/{picture_id}">
-                    <img src="{{ url_for('static', filename=('trip_' ~ picture.folder_id ~ '/' ~ picture.image_file)) }}"
-                         alt="Lights" style="width:100%">
-                    <div class="caption">
-                      <p>Lorem ipsum...</p>
-                    </div>
-                  </a>
-                </div>
-              </div>
-            </div>
-        {% endfor %}
-        {% for picture in pictures %}
-            <article class="media image-section">
-              <!--  <img class="rounded-circle article-img" src="{{ url_for('static', filename='profile_pics/' + picture.author.profile_pic) }}">
-              -->
-              <div class="media-body">
-                <div class="article-metadata">
-                  <a class="mr-2" href="#">{{ picture.author.username }}</a>
-                  <small class="text-muted">{{ picture.date_taken.strftime('%Y-%m-%d') }}</small>
-                </div>
-                <img class="img-fluid" src="{{ url_for('static', filename=('trip_' ~ picture.folder_id ~ '/' ~ picture.image_file)) }}">
-                <p class="article-content">{{ picture.description }} </p>
-              </div>
-            </article>
-            <div class="row">
-              <div class="col-md-4">
-                <div class="thumbnail">
-                  <a href="/picture/{picture_id}">
-                    <img src="{{ url_for('static', filename=('trip_' ~ picture.folder_id ~ '/' ~ picture.image_file)) }}"
-                         alt="Lights" style="width:100%">
-                    <div class="caption">
-                      <p>Lorem ipsum...</p>
-                    </div>
-                  </a>
-                </div>
-              </div>
-            </div>
-        {% endfor %}
     </div>
 {% endblock content %}
-<a class="nav-item nav-link" href="{{ url_for('new_picture') }}">New Picture</a>
